Stay Current update

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -48,6 +48,8 @@
     href: college-credit-for-certification-exams.md
   - name: Студенческие скидки
     href: student-discounts.md
+- name: Продлите свой сертификат Microsoft
+  href: renew-your-microsoft-certification.md
 - name: Помощь по сертификации
   href: help.md
 - name: Помощь по Microsoft Official Courseware (MOC)
